# test

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  character.py  justfile  main.py  pyproject.toml  requirements.txt  run
.github/workflows/: publish.yaml
my_package/school/: component.py
test_package/: pyproject.toml
test_package/school/: __init__.py  component.py  staff.py
test_package/school.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/school/: test_component.py
